--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,28 @@
-fastapi
-uvicorn[standard]
-google-generativeai
-hypercorn
-python-dotenv
-paddle-python-sdk
-firebase-admin
-python-multipart
-fal-client
+# Core FastAPI and server
+fastapi==0.115.0
+uvicorn[standard]==0.31.0
+hypercorn==0.17.3
+python-multipart==0.0.12
+
+# Environment and configuration
+python-dotenv==1.0.1
+
+# Paddle Billing integration
+paddle-python-sdk==0.2.1
+
+# Firebase / Firestore
+firebase-admin==6.5.0
+google-cloud-firestore==2.18.0
+
+# Google AI (if you're using Gemini)
+google-generativeai==0.8.3
+
+# Fal AI for image generation
+fal-client==0.4.1
+
+# Required dependency for google-cloud-firestore
+packaging==24.1
+
+# Optional but recommended for production
+# httpx==0.27.2  # For async HTTP requests if needed
+# pydantic==2.9.2  # Usually comes with FastAPI but explicit is better
