--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,26 @@
-# Core FastAPI and server
-fastapi==0.115.0
-uvicorn[standard]==0.31.0
-hypercorn==0.17.3
-python-multipart==0.0.12
+# FastAPI and server dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+python-dotenv==1.0.0
 
-# Environment and configuration
-python-dotenv==1.0.1
+# CORS middleware
+fastapi-cors==0.0.6
 
-# Paddle Billing integration
-paddle-python-sdk==0.2.1
-
-# Firebase / Firestore
-firebase-admin==6.5.0
-google-cloud-firestore==2.18.0
-
-# Google AI (if you're using Gemini)
-google-generativeai==0.8.3
-
-# Fal AI for image generation
+# Fal.ai client for image generation
 fal-client==0.4.1
 
-# Required dependency for google-cloud-firestore
-packaging==24.1
+# Paddle payment integration
+paddle-python-sdk==0.9.0
 
-# Optional but recommended for production
-# httpx==0.27.2  # For async HTTP requests if needed
-# pydantic==2.9.2  # Usually comes with FastAPI but explicit is better
+# Firebase Admin SDK
+firebase-admin==6.2.0
+
+# Image processing for watermarking
+Pillow==10.1.0
+
+# HTTP requests for downloading images
+requests==2.31.0
+
+# Cryptography (if needed by firebase)
+cryptography==41.0.5
