--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # FastAPI and server dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+hypercorn==0.17.3
 python-multipart==0.0.6
 python-dotenv==1.0.0
 
